# ropa

./: .dockerignore  .gitignore  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt  uv.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt
docker/app/: Dockerfile
docker/core/: Dockerfile
src/ropa/: __init__.py
src/ropa/collectors/: __init__.py  ay_not_dead.py  bolivia_universo.py  ropa_revolver.py
src/ropa/config/: config.py
src/ropa/db/: __init__.py  mongo_connector.py
src/ropa/llm_agents/: __init__.py
src/ropa/llm_agents/size_table_extractor/: size_table_extractor.py  system-prompt.md
src/ropa/meta/: schema.py  size_guides.py
src/ropa/meta/interfaces/: __init__.py  catalog.py  shopify.py
src/ropa/scripts/: collect_data.py  test_ay_not_dead_collector.py
tests/: test_collectors.py
